[package]
name = "scanner"
version = "0.1.0"
authors = ["M. Ali AKBAY <ali.akbay@spaghetti.labs>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
jsonrpsee = { version = "0.26.0", features = ["async-client", "http-client", "macros", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json"] }
hex = "0.4.3"
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
fjall = { version = "2.11.2", features = ["lz4", "single_writer_tx"] }
bincode = { version = "2.0.1", features = ["derive"] }
bitcoin_hashes = "0.16.0"
secp256k1 = "0.31.1"
byteorder = "1.5.0"
bitcoin = { version = "0.32.7", features = ["serde"] }
futures = "0.3.31"
