[package]
name = "scanner"
version = "0.1.0"
authors = ["M. Ali AKBAY <ali.akbay@spaghetti.labs>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
jsonrpsee = { version = "0.26.0", features = ["async-client", "http-client", "macros", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json"] }
hex = "0.4.3"
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
fjall = { version = "2.11.2", default_features = false }
bitcoin_hashes = "0.16.0"
secp256k1 = "0.31.1"
byteorder = "1.5.0"
bitcoin = { version = "0.32.7", features = ["serde", "rand"] }
futures = "0.3.31"
juniper = { version = "0.17.0", features = ["anyhow"] }
rocket = "0.5.1"
juniper_rocket = "0.10.0"
async-stream = "0.3.6"
num_cpus = "1.17.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"
tracing = "0.1.41"
opentelemetry_sdk = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.31.0"
rand = "0.9.2"
bincode = { version = "2.0.1" }
rayon = "1.11.0"
